Closed Bug 1670148 Opened 4 years ago Closed 4 years ago

Fix release fence handling at AsyncImagePipelineManager on Android

Categories

(Core :: Graphics: WebRender, defect)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- unaffected
firefox82 --- wontfix
firefox83 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

It is a regression of Bug 1661189.

With it, AndroidHardwareBuffer owning TextureHosts became to be stored in mTextureHostsUntilRenderSubmitted.

Assignee: nobody → sotaro.ikeda.g
Blocks: 1661189
Blocks: 1562818
No longer blocks: 1661189
Regressed by: 1661189
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1661189

Keywords: regression
OS: Unspecified → Android
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4c410e101c8d
Fix release fence handling at AsyncImagePipelineManager on Android r=jnicol
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch

The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(sotaro.ikeda.g)

uplift is not necessary.

Flags: needinfo?(sotaro.ikeda.g)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: